Added support to search and fixed index to support multpile rows to have same value
